<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radiogroupColors"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <RadioButton
            android:id="@+id/radioButtonBlack"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:text="@string/fondnoirtxt" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/fondverttxt" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moneyPlayerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroupColors"
        app:layout_constraintVertical_bias="0.263">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/moneyInittxt"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyPlayerID"
        app:layout_constraintVertical_bias="0.192">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playerNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playerNameEdittxt" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/moneyPlayerID"
        app:layout_constraintTop_toBottomOf="@+id/radiogroupColors"
        app:layout_constraintVertical_bias="0.102"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberOfDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NumberOfGametxt"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="204dp"
        android:layout_height="101dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyPlayerID"
        app:layout_constraintVertical_bias="0.43">

        <RadioGroup
            android:id="@+id/radioGroupLang"
            android:layout_width="70dp"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonFR"
                android:layout_width="match_parent"
                android:layout_height="54dp" />

            <RadioButton
                android:id="@+id/radioButtonENG"
                android:layout_width="match_parent"
                android:layout_height="52dp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/french_flag" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/american_flag" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>