<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bigConstraintID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <Button
            android:id="@+id/anotherCardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="playerDrawAnotherCard"
            android:text="@string/ButtonAnotherCardtxt" />


        <Button
            android:id="@+id/noMoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="bankLastTurn"
            android:text="@string/ButtonNoMoreCardtxt" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="reset"
            android:text="@string/ButtonResettxt" />
    </LinearLayout>

    <TextView
        android:id="@+id/bankName"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="397dp"
        android:layout_height="137dp"
        android:layout_marginBottom="320dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankCardPanel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bankScore"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:layout_marginBottom="384dp"
        android:text="TextView"
        android:textAlignment="center"
        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankCardPanel"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/bankCardPanel"
        android:layout_width="409dp"
        android:layout_height="118dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankName"
        app:layout_constraintVertical_bias="0.074">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerCardPanel"
        android:layout_width="409dp"
        android:layout_height="129dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="88dp"
        android:layout_height="21dp"
        android:text="TextView"
        android:textAlignment="center"
        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerCardPanel"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/playerMoney"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"

        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerCardPanel"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/deckCards"
        android:layout_width="163dp"
        android:layout_height="29dp"
        android:text="TextView"
        android:textAlignment="center"
        android:theme="@style/ThemeFont"
        app:layout_constraintBottom_toTopOf="@+id/bankCardPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bankName"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerCardPanel"
        app:layout_constraintVertical_bias="0.783">

        <TextView
            android:id="@+id/mise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:theme="@style/ThemeFont"
            app:layout_constraintBottom_toTopOf="@+id/mymisebar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.545" />

        <Button
            android:id="@+id/miseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchGame"
            android:text="@string/misertxt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <SeekBar
            android:id="@+id/mymisebar"
            android:layout_width="267dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/miseButton"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.79" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>